--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@mui/lab": "^5.0.0-alpha.76",
     "@mui/material": "^5.8.7",
     "@mui/styles": "^5.8.7",
+    "@mui/system": "^5.10.2",
+    "@mui/x-data-grid": "^5.15.3",
     "@mui/x-date-pickers": "^5.0.0-beta.2",
     "@sentry/browser": "^7.5.1",
     "aws-amplify": "^4.3.26",
