--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -139,7 +139,9 @@
           "category": "api",
           "resourceName": "originateclientprod",
           "attributes": [
-            "GraphQLAPIIdOutput"
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput",
+            "GraphQLAPIKeyOutput"
           ]
         }
       ]
